--- a/src/components/TopBar/index.scss
+++ b/src/components/TopBar/index.scss
@@ -6,3 +6,17 @@
   left: 0;
   box-shadow: 0 2px 8px #f0f1f2;
 }
+
+.headerInner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.logoStyle {
+  width: 180px;
+  height: 36px;
+  margin-left: 50px;
+  margin-top: 14px;
+  cursor: pointer;
+}
