--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -4,3 +4,15 @@
   margin-top: 20px;
   color: #000;
 }
+
+.handleBtn {
+  margin-left: 40px;
+}
+.tableContainer {
+  padding: 40px;
+}
+
+.toDoInput {
+  width: 400px;
+  margin-left: 20px;
+}
