--- a/src/components/TopBar/index.scss
+++ b/src/components/TopBar/index.scss
@@ -10,7 +10,6 @@
 .headerInner {
   width: 100%;
   height: 100%;
-  display: flex;
 }
 
 .logoStyle {
@@ -18,5 +17,13 @@
   height: 36px;
   margin-left: 50px;
   margin-top: 14px;
+  float: left;
   cursor: pointer;
+}
+
+.localSelectStyle {
+  width: 120px;
+  margin-right: 20px;
+  margin-top: 18px;
+  float: right;
 }
